Res1ReducingNoise2016-01-05.txt
  File "./ReducingNoise.py", line 34
    def 50unique(fil)
         ^
SyntaxError: invalid syntax
